--- a/user.yml
+++ b/user.yml
@@ -1,7 +1,7 @@
 --- # Personal information
-first: FIRST_NAME
-last: LAST_NAME
-watiam: WATIAM_ID
-student: STUDENT_ID
-email: email
+first: Muhammad
+last: Ansari
+watiam: ma8ansar
+student: 20812646
+email: ma8ansar@uwaterloo.ca
 ...
